# app/Http/Requests/CrearProveedorUserRequest.php
@@ -6,28 +6,28 @@ use Illuminate\Foundation\Http\FormRequest;
 
 /**
  * @OA\Schema(
- *     schema="RegistrarProveedorUserRequest",
+ *     schema="CrearProveedorUserRequest",
  *     required={
  *         "razon_social", "nombre_comercial", "rfc", "email", "password",
  *         "telefono", "direccion"
  *     },
+ *     @OA\Property(property="razon_social", type="string", maxLength=255),
+ *     @OA\Property(property="nombre_comercial", type="string", maxLength=255),
+ *     @OA\Property(property="rfc", type="string", maxLength=13),
+ *     @OA\Property(property="email", type="string", format="email", maxLength=255),
+ *     @OA\Property(property="password", type="string", format="password", minLength=8),
+ *     @OA\Property(property="telefono", type="string", maxLength=15),
+ *     @OA\Property(property="direccion", type="string", maxLength=255),
  *     @OA\Property(property="nombre_propietario", type="string", maxLength=255),
  *     @OA\Property(property="nombre_de_quien_registra", type="string", maxLength=255),
- *     @OA\Property(property="nombre_comercial", type="string", maxLength=255),
- *     @OA\Property(property="razon_social", type="string", maxLength=255),
- *     @OA\Property(property="rfc", type="string", maxLength=13),
  *     @OA\Property(property="tipos_empresa_id", type="integer", example=1),
  *     @OA\Property(property="tipos_empresa_otro", type="string", maxLength=60, nullable=true),
  *     @OA\Property(property="descripcion_giro_empresa", type="string", maxLength=255),
  *     @OA\Property(property="direccion_empresa", type="string", maxLength=255),
- *     @OA\Property(property="email", type="string", format="email", maxLength=255),
- *     @OA\Property(property="password", type="string", format="password", minLength=8),
- *     @OA\Property(property="telefono", type="string", maxLength=15),
  *     @OA\Property(property="pagina_web", type="string", maxLength=255),
  *     @OA\Property(property="estado", type="string", maxLength=255),
  *     @OA\Property(property="municipio", type="string", maxLength=255),
  *     @OA\Property(property="codigo_postal", type="string", maxLength=10),
- *     @OA\Property(property="direccion", type="string", maxLength=255),
  *     @OA\Property(property="direccion_fiscal", type="string", maxLength=255, nullable=true),
  *     @OA\Property(property="contacto_nombre", type="string", maxLength=150),
  *     @OA\Property(property="contacto_cargo", type="string", maxLength=60),
@@ -35,7 +35,7 @@ use Illuminate\Foundation\Http\FormRequest;
  *     @OA\Property(property="contacto_correo", type="string", format="email", maxLength=60)
  * )
  */
-class RegistrarProveedorUserRequest extends FormRequest
+class CrearProveedorUserRequest extends FormRequest
 {
     public function authorize(): bool
     {
